--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/utility.scss
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/utility.scss
@@ -54,6 +54,11 @@ $widthDesktop: "840px";
     user-select: none;
 }
 
+.clearfix::after {
+    content: "";
+    clear: both;
+}
+
 /*html {
     position: relative;
     min-height: 100%;
