--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/captcha.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/captcha.html.twig
@@ -1,6 +1,6 @@
 {% if settingRow.captcha == true %}
     <div class="captcha">
-        <i class="fa fa-retweet icon"></i>
+        <i class="material-icons">autorenew</i>
         <img src="data:image/png;base64,{{captchaImage}}" alt="Captcha image"/>
         <input type="text" name="captcha" value="" size="7" maxlength="7"/>
     </div>
