--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/utility.css
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/utility.css
@@ -1,15 +1,24 @@
-@media (max-width: 839px) { .display_desktop { display: none !important; }
+@media (max-width: 839px) { /* line 13, ../../scss/system/utility.scss */
+  .display_desktop { display: none !important; }
+  /* line 16, ../../scss/system/utility.scss */
   .display_mobile { display: block !important; } }
-@media (min-width: 840px) { .display_desktop { display: block !important; }
+@media (min-width: 840px) { /* line 21, ../../scss/system/utility.scss */
+  .display_desktop { display: block !important; }
+  /* line 24, ../../scss/system/utility.scss */
   .display_mobile { display: none !important; } }
 @-webkit-viewport { width: device-width; }
 @-moz-viewport { width: device-width; }
 @-ms-viewport { width: device-width; }
 @-o-viewport { width: device-width; }
 @viewport { width: device-width; }
+/* line 45, ../../scss/system/utility.scss */
 .user_touch_none { -ms-touch-action: none; touch-action: none; }
 
+/* line 50, ../../scss/system/utility.scss */
 .user_select_none { -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
+
+/* line 57, ../../scss/system/utility.scss */
+.clearfix::after { content: ""; clear: both; }
 
 /*html { position: relative; min-height: 100%;
 }
