--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/module/empty.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/module/empty.html.twig
@@ -2,7 +2,7 @@
 
 {% block panelId %}panel_id_6{% endblock %}
 {% block moduleHeaderIcon %}
-    <i class="fa fa-square-o fa-lg">&nbsp;</i>
+    <i class="material-icons">crop_square</i>
 {% endblock %}
 {% block moduleHeader %}{% trans %}module_6{% endtrans %}{% endblock %}
 {% block moduleContainer %}
