--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/authentication.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/authentication.html.twig
@@ -9,38 +9,38 @@
 {% endspaceless %}
 {% endblock %}
 {% block moduleHeaderIcon %}
-    <i class="fa fa-user fa-lg">&nbsp;</i>
+    <i class="material-icons">account_box</i>
 {% endblock %}
 {% block moduleHeader %}
     {{response.module.label|trans}}
 {% endblock %}
 {% block moduleContainer %}
-    <div class="authentication_container">
+    <div>
         {% if form == null %}
-            <p class="margin_clear"><b>{% trans %}authentication_1{% endtrans %}</b></p>
-            <p class="margin_clear">{{response.values.user.username}}</p>
-            <p class="margin_clear"><b>{% trans %}authentication_2{% endtrans %}</b></p>
-            <p class="margin_clear">
+            <p><b>{% trans %}authentication_1{% endtrans %}</b></p>
+            <p>{{response.values.user.username}}</p>
+            <p><b>{% trans %}authentication_2{% endtrans %}</b></p>
+            <p>
                 {% for value in response.values.roleUserRow %}
                     - {{value|trans}}
                 {% endfor %}
             </p>
-            <p class="margin_clear"><b>{% trans %}authentication_3{% endtrans %}</b></p>
-            <p class="margin_clear">{{response.values.dateLastLogin[0]}} [{{response.values.dateLastLogin[1]}}]</p>
-            <div class="margin_top horizontal_center">
-                <a class="button_custom btn-block" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 1, 'urlExtra': "cp_profile"})}}">{% trans %}authentication_4{% endtrans %}</a>
-                <a class="button_custom btn-block logout_button" href="{{path("authentication_exit_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}">{% trans %}authentication_5{% endtrans %}</a>
+            <p><b>{% trans %}authentication_3{% endtrans %}</b></p>
+            <p>{{response.values.dateLastLogin[0]}} [{{response.values.dateLastLogin[1]}}]</p>
+            <div">
+                <a href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 1, 'urlExtra': "cp_profile"})}}">{% trans %}authentication_4{% endtrans %}</a>
+                <a href="{{path("authentication_exit_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}">{% trans %}authentication_5{% endtrans %}</a>
             </div>
         {% else %}
             {% form_theme form "bootstrap_3_layout.html.twig" %}
 
-            <form id="form_user_authentication" class="form_user_authentication" action="{{path("authentication_enter_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+            <form id="form_user_authentication" action="{{path("authentication_enter_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
                 {{form_row(form._username, {'label': "authentication_6"})}}
                 {{form_row(form._password, {'label': "authentication_7"})}}
                 
-                <div class="form-group">
-                    <div class="input-group">
-                        <input class="button_custom" type="submit" value="{% trans %}authentication_9{% endtrans %}"/>
+                <div>
+                    <div>
+                        <input type="submit" value="{% trans %}authentication_9{% endtrans %}"/>
                         {{form_widget(form._remember_me, {'label': "authentication_8"})}}
                     </div>
                 </div>
@@ -51,9 +51,9 @@
             </form>
             
             {% if (settingRow['website_active'] == true) %}
-                <div class="horizontal_center">
-                    <a class="button_custom btn-block" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 3})}}">{% trans %}authentication_10{% endtrans %}</a>
-                    <a class="button_custom btn-block" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 4})}}">{% trans %}authentication_11{% endtrans %}</a>
+                <div>
+                    <a href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 3})}}">{% trans %}authentication_10{% endtrans %}</a>
+                    <a href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 4})}}">{% trans %}authentication_11{% endtrans %}</a>
                 </div>
             {% endif %}
         {% endif %}
