--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
@@ -30,8 +30,8 @@
 {% endblock%}
 
 {% block headerContainer %}
-   {#<div class="sortable_column">
-        {% if (settingRow['website_active'] == false and is_granted("IS_AUTHENTICATED_FULLY") == false) or urlExtra == "maintenance_authentication" %}
+   <div class="sortable_column">
+        {#{% if (settingRow['website_active'] == false and is_granted("IS_AUTHENTICATED_FULLY") == false) or urlExtra == "maintenance_authentication" %}
             <div class="logo_big display_desktop">
                 <img class="logo_svg" src="{{asset("bundles/uebusaito/images/templates/" ~ settingRow['template_name'] ~ "/logo.svg")}}"/>
                 <p class="logo_text">{{websiteName}}</p>
@@ -45,7 +45,7 @@
                 <img class="logo_svg" src="{{asset("bundles/uebusaito/images/templates/" ~ settingRow['template_name'] ~ "/logo.svg")}}"/>
                 <p class="logo_text">{{websiteName}}</p>
             </div>
-        {% endif %}
+        {% endif %}#}
 
         {% if (settingRow['website_active'] == true or is_granted("IS_AUTHENTICATED_FULLY") == true) and urlExtra != "maintenance_authentication" and app.request.get("error") is null %}
             {% for value in response.modules.header %}
@@ -54,12 +54,12 @@
                 {% endif %}
             {% endfor %}
         {% endif %}
-    </div>#}
+    </div>
    
     <header class="mdc-toolbar mdc-toolbar--fixed mdc-toolbar--waterfall mdc-toolbar--flexible mdc-toolbar--flexible-default-behavior mdc-toolbar--flexible-space-maximized">
-        <div class="mdc-toolbar__row" style="height: 200px;">
+        <div class="mdc-toolbar__row">
             <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
-                <a id="menu_root_button" class="material-icons mdc-toolbar__menu-icon" href="javascript:void(0)">menu</a>
+                <a id="menu_root_button" class="material-icons mdc-toolbar__menu-icon display_mobile" href="javascript:void(0)">menu</a>
                 <span class="mdc-toolbar__title">Title</span>
             </section>
             <section class="mdc-toolbar__section mdc-toolbar__section--align-end" role="toolbar">
@@ -89,10 +89,10 @@
 {% endblock %}
 
 {% block columnCenterContainer %}
-    {#{% if app.request.get("error") is not null and app.request.get("error") is not empty %}
+    {% if app.request.get("error") is not null and app.request.get("error") is not empty %}
         {{-include("@UebusaitoBundleViews/render/static/error.html.twig")-}}
     {% else %}
-        {{-include("@UebusaitoBundleViews/include/flashBag.html.twig")-}}#}
+        {#{{-include("@UebusaitoBundleViews/include/flashBag.html.twig")-}}#}
 
         {% if (settingRow['website_active'] == true or is_granted("IS_AUTHENTICATED_FULLY") == true) and urlExtra != "maintenance_authentication" %}
             <div class="sortable_column">
@@ -122,7 +122,7 @@
                 {% endif %}
             </div>
         {% endif %}
-    {#{% endif %}#}
+    {% endif %}
 {% endblock %}
 
 {% block columnRightContainer %}
