--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/authentication.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/authentication.html.twig
@@ -27,12 +27,13 @@
             </p>
             <p><b>{% trans %}authentication_3{% endtrans %}</b></p>
             <p>{{response.values.dateLastLogin[0]}} [{{response.values.dateLastLogin[1]}}]</p>
-            <div">
+            <div>
                 <a href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 1, 'urlExtra': "cp_profile"})}}">{% trans %}authentication_4{% endtrans %}</a>
                 <a href="{{path("authentication_exit_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}">{% trans %}authentication_5{% endtrans %}</a>
             </div>
         {% else %}
-            {% form_theme form "bootstrap_3_layout.html.twig" %}
+            {#{% form_theme form "bootstrap_3_layout.html.twig" %}#}
+            {% form_theme form "@UebusaitoBundleViews/layout/layout_form_materialDesign.html.twig" %}
 
             <form id="form_user_authentication" action="{{path("authentication_enter_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
                 {{form_row(form._username, {'label': "authentication_6"})}}
@@ -40,7 +41,8 @@
                 
                 <div>
                     <div>
-                        <input type="submit" value="{% trans %}authentication_9{% endtrans %}"/>
+                        {{form_widget(form.submit, {'label': "authentication_9"})}}
+                        {#<input type="submit" value="{% trans %}authentication_9{% endtrans %}"/>#}
                         {{form_widget(form._remember_me, {'label': "authentication_8"})}}
                     </div>
                 </div>
@@ -52,8 +54,8 @@
             
             {% if (settingRow['website_active'] == true) %}
                 <div>
-                    <a href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 3})}}">{% trans %}authentication_10{% endtrans %}</a>
-                    <a href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 4})}}">{% trans %}authentication_11{% endtrans %}</a>
+                    <a class="mdc-button mdc-button--raised" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 3})}}">{% trans %}authentication_10{% endtrans %}</a>
+                    <a class="mdc-button mdc-button--raised" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 4})}}">{% trans %}authentication_11{% endtrans %}</a>
                 </div>
             {% endif %}
         {% endif %}
